# RAG-using-Langchain

./: .gitignore  main.py  pyproject.toml  rag-using-langchain.ipynb  requirements.txt
notebooks/: documents.ipynb  rag_pipeline.ipynb
